# duana

./: .clang-format  .gitignore  CMakeLists.txt  LICENCE  README.md  README_IT.md
include/: cli.h  cli_parser.h  config.h  duana_config.h  filter.h  fs_analyzer.h  json_export.h  options.h  output.h  report_writer.h  scanner.h  sig_handler.h  sorter.h  stats_collector.h  utils.h
src/: cli.c  cli_parser.c  config.c  filter.c  fs_analyzer.c  json_export.c  main.c  options.c  output.c  report_writer.c  scanner.c  sig_handler.c  sorter.c  stats_collector.c  utils.c
tests/integration/: test_filters.py  test_size.py
tests/unit/: test_cli_parser.c  test_filter.c  test_fs_analyzer.c  test_json_export.c  test_report_writer.c  test_scanner.c  test_sig_handler.c  test_sorter.c  test_stats_collector.c  test_utils.c
